[package]
name = "pic"
version = "0.1.0"
edition = "2021"
authors = ["Emanuel <emanuel.morille@proton.me>"]
description = "Preview Images with a CLI."
repository = "https://github.com/emsquid/pic"

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.1", features = ["derive"] }
image = "0.24.5"
imagesize = "0.11.0"
libc = "0.2.139"
tempfile = "3.3.0"
