[package]
name = "pic"
version = "0.1.2"
edition = "2021"
authors = ["Emanuel <emanuel.morille@proton.me>"]
description = "Preview Image in CLI."
repository = "https://github.com/emsquid/pic"
readme = "README.md"
license = "MIT"

[dependencies]
ansi_colours = { version = "1.2.1", default-features = false }
base64 = "0.21.0"
clap = { version = "4.1.1", features = ["derive"] }
wild = "2.1.0"
console = { version = "0.15.5", default-features = false }
crossbeam-channel = "0.5.6"
ctrlc = "3.2.4"
image = "0.24.5"
imagesize = "0.11.0"
libc = "0.2.139"
sixel-rs = "0.3.3"
tempfile = "3.3.0"
